@@ -1,12 +1,36 @@
-FROM maven:3.8.6-openjdk-18-slim AS MAVEN_TOOL_CHAIN
-COPY pom.xml /tmp/
-RUN mvn -B dependency:go-offline -f /tmp/pom.xml -s /usr/share/maven/ref/settings-docker.xml
-COPY src /tmp/src/
-WORKDIR /tmp/
-RUN mvn -B -s /usr/share/maven/ref/settings-docker.xml package
+FROM maven:3.9.6-eclipse-temurin-21 AS build
+RUN mkdir /usr/src/project
+COPY . /usr/src/project
+WORKDIR /usr/src/project
+RUN mvn clean package -DskipTests
+RUN jar xf target/eruservice-1.0.0.jar
 
-FROM openjdk:18-alpine
+RUN jdeps --ignore-missing-deps -q  \
+    --recursive  \
+    --multi-release 21  \
+    --print-module-deps  \
+    --class-path 'BOOT-INF/lib/*'  \
+    target/eruservice-1.0.0.jar > deps.info
+
+RUN jlink \
+    --add-modules $(cat deps.info) \
+    --strip-debug \
+    --compress 2 \
+    --no-header-files \
+    --no-man-pages \
+    --output /myjre
+
+
+FROM debian:bookworm-slim
 EXPOSE 8069
-RUN mkdir /app
-COPY --from=MAVEN_TOOL_CHAIN /tmp/target/*.jar /app/eru-service.jar
-ENTRYPOINT ["java", "-jar", "/app/eru-service.jar"]
+ENV JAVA_HOME /user/java/jdk21
+ENV PATH $JAVA_HOME/bin:$PATH
+COPY --from=build /myjre $JAVA_HOME
+RUN apt-get update && apt-get install -y --no-install-recommends dumb-init
+RUN mkdir /project
+RUN addgroup --system javauser && adduser --system --shell /bin/false --ingroup javauser javauser
+COPY --from=build /usr/src/project/target/eruservice-1.0.0.jar /project/
+WORKDIR /project
+RUN chown -R javauser:javauser /project
+USER javauser
+ENTRYPOINT dumb-init java -jar eruservice-1.0.0.jar
